@@ -1,5 +1,10 @@
 2007-03-28  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/interface_view.py: Expander labels show if a given
+	interface is implemented or not (bug 423749).
+	
+2007-03-28  Eitan Isaacson  <eitan@ascender.com>
+
 	* src/lib/accerciser/pyLinAcc.zip: Repackaged from upstream.
 	
 2007-03-27  Eitan Isaacson  <eitan@ascender.com>
